webapp-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  namespace: zad2
spec:
  replicas: 4
  selector:
    matchLabels:
      app: webapp
  strategy:
    rollingUpdate:
      maxSurge: 5
      maxUnavailable: 2
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: nginx
        image: janfigurapollub/sem2-chmura-zad2:1.4
