webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-svc
  namespace: zad2
spec:
  type: NodePort
  selector:
    app: webapp
  ports:
    - port: 80
      nodePort: 30007
